--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@aws-amplify/ui-react": "^6.1.13",
+    "@livekit/components-react": "^2.6.5",
+    "@livekit/components-styles": "^1.1.3",
     "aws-amplify": "^6.4.0",
-    "next": "14.1.1",
+    "livekit-client": "^2.5.8",
+    "next": "^14.2.15",
     "react": "^18",
     "react-dom": "^18"
   },
